--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -102,8 +102,11 @@ hr {
 @media (max-width: 500px) {
 	.navbar {
 		text-align: center;
-		padding: 50px 0px 0px 0px;
+		padding: 25px 0px 0px 0px;
 	}
+    .hidden_500px {
+        display: none !important;
+    }
 	#author-name {
 		width: 100%;
 		float: none;
