--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,7 +81,7 @@
                 {% assign parts = site.title_path | split: "/" %}
                 <a id="author-name" class="alignable pull-left" href="/">{{ parts[0] }}</a>
                 <!-- <a id="author-name" class="alignable pull-left" href="{{ site.baseurl }}">/{{ parts[1] }}</a> -->
-                <a id="author-name" class="alignable pull-left" href="#">/{{ parts[1] }}</a>
+                <a id="author-name" class="alignable pull-left hidden_500px" href="#">/{{ parts[1] }}</a>
             {% else %}
                 <a id="author-name" class="alignable pull-left" href="{{ site.baseurl }}">{{ site.title }}</a>
             {% endif %}
