# modified:   .gitignore 	# modified:   LICENSE 	# modified:   README.md 	# modified:   _config.yml 	# modified:   _includes/experience.html 	# new file:   _includes/path/link_cert.html 	# new file:   _includes/path/link_honors.html 	# modified:   _sass/_style.scss 	# new file:   pdf.md 	# modified:   resume.pdf

--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -1,3 +1,15 @@
+<style>
+  .experience-list li p {
+    text-align: justify;
+    font-size: 0.9em;
+  }
+
+  .experience-list li strong, 
+  .experience-list li em {
+    display: inline;
+  }
+</style>
+
 <ul class="experience-list">
     {% for exp in include.experiences %}
       <li>
