--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -8,6 +8,7 @@ html {
     height: 100%;
     margin: 0;
     padding: 0;
+    scrollbar-gutter: stable !important;
 }
 body {
     margin: 0;
@@ -27,6 +28,15 @@ hr {
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
+
+/*
+ * tambahan
+ */
+
+.break-page {
+    page-break-before: always;
+}
+
 
 /*
  * Navbar
